# sdk1

./: README.md  ROADMAP.md  Rithmic Test_Orangeburg_connection_params.txt
DTC doc/: 01_DTCMessageDocumentation.md  02_DTCMessages_All.md  03_Authentication_Connection.md  04_MarketData.md  05_OrderEntry.md  06_Trading.md  07_AccountList.md  08_SymbolDiscovery.md  09_AccountBalance.md  10_Logging.md  11_HistoricalPriceData.md  12_NewInstance_DTC.md  13_RelayServer.md  14_DTCProtocol.md  15_DTC_TestClient.md  16_DTCServer.md  17_DataSourceSettings.md
Rithmic SDK documentation/: README.md  faq.md  faq_rithmic.md  merged.txt  namespace_rapi.md  overview.md  programmers_guide.md  quick_start.md
Rithmic SDK documentation/classes/: index.md
Rithmic SDK documentation/classes/account/: AccountInfo.md  AccountListInfo.md  AccountUpdateInfo.md  AgreementInfo.md  AgreementListInfo.md  AssignedUserListInfo.md  AutoLiquidateInfo.md  IbListInfo.md  PnlInfo.md  PnlReplayInfo.md  PositionExitInfo.md  ProductRmsInfo.md  ProductRmsListInfo.md  RmsInfo.md  UserDefinedSpreadCreateInfo.md  UserInfo.md  UserListInfo.md  UserProfileInfo.md
Rithmic SDK documentation/classes/engine/: AdmCallbacks.md  EnvironmentInfo.md  EnvironmentListInfo.md  EnvironmentVariable.md  LoginParams.md  RCallbacks.md  REngine.md  REngineParams.md
bridge/: CMakeLists.txt
bridge/src/: BridgeConfig.h  DTCServer.cpp  DTCServer.h  RithmicClient.cpp  RithmicClient.h  Translator.cpp  Translator.h  Utils.cpp  Utils.h  main.cpp
include/: DTCProtocol.cpp  DTCProtocol.h  RApiPlus.h
samples/: SampleBar.cpp  SampleMD.cpp  SampleOrder.cpp  SampleTimer.cpp
win10/lib/: kit_md64.lib
(+96 files in other folders)
